2001-01-09  Larry Jones  <larry.jones@sdrc.com>

	* run.c (close_on_exec): Remove check for FD_CLOEXEC.  As far as I
	can see, it's *never* been defined, which defeats the whole point.
	If F_SETFD is defined, it's probably safe to use it.

	* server.c (do_cvs_command): Call close_on_exec on the protocol and
	flow control pipes in the child process so they don't get inherited
	by any subsidiary processes.

	* cvs.h (free_cvsroot_t): Spell correctly (was free_CVSroot_t).

2001-01-10  Derek Price  <derek.price@openavenue.com>
	    Rex Jolliff  <Rex_Jolliff@notes.ymp.gov>

	* build_src.com: VMS changes
	* filesubr.c: replace calls to unlink() with CVS_UNLINK() for VMS
	* rcs.c: ditto

2001-01-10  Derek Price  <derek.price@openavenue.com>

	* main.c (current_root): explicitly list this as a static global

2001-01-10  Derek Price  <derek.price@openavenue.com>

	* cvs.h (get_cvs_port_number): change name & prototype from
	get_port_number
	* client.c (get_cvs_port_number): new function which returns a port
	number based on a cvsroot_t rather than requiring all possible sources
	passed in
	(connect_to_pserver): use new get_cvs_port_number function
	(connect_to_server): ditto
	* login.c (get_password): use new get_cvs_port_number function
	(login): ditto
	(logout): ditto

2001-01-10  Derek Price  <derek.price@openavenue.com>

	* Makefile.am ($(srcdir)/version.c): specify $(srcdir) for all subparts
	of the build since some systems don't allow mv's across partitions
	* Makefile.in: regenerated

2001-01-10  Derek Price  <derek.price@openavenue.com>

	* Makefile.am (version.c): specify $(srcdir) explicitly in target rule
	so version.c gets built properly for all makes.
	(version.o): specify $(srcdir)/version.c explicitly so dependency is
	found and built properly
	* Makefile.in: regenerated

2001-01-09  Derek Price  <derek.price@openavenue.com>

	* version.c: updated timestamp

2001-01-09  Larry Jones  <larry.jones@sdrc.com>
